bottom button mobile postion fix

--- a/wp-content/themes/stella-horeca/assets/scss/theme/components/_bottom-buttons.scss
+++ b/wp-content/themes/stella-horeca/assets/scss/theme/components/_bottom-buttons.scss
@@ -5,8 +5,8 @@
   transform: translateX(-50%);
   bottom: 2rem;
 
-  @media (max-width: $xs) {
-    bottom: 2.3rem;
+  @media (max-width: $lg) {
+    bottom: 2.5rem;
   }
 
   svg {
